--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -25,6 +25,7 @@
     margin: $margin;
     width: fit-content;
     padding: 0.6em;
+    box-shadow: 0 0 6px gray;
 
     .qty {
       background-color: transparent;
