--- a/css/components/_cart-total.scss
+++ b/css/components/_cart-total.scss
@@ -10,15 +10,14 @@
 
     h2 {
       text-align: center;
-      font-size: 2rem;
-      margin: 3em;
+      margin: 2em 0;
     }
 
     table {
-      border-radius: 5px;
       width: 90%;
-      box-shadow: 0 0 5px gray;
-      background: rgba(245, 245, 245, 0.6);
+      background-color: rgba(245, 245, 245, 0.3);
+      border-radius: 5px;
+      box-shadow: 0 0 6px gray;
       border-collapse: collapse;
 
       tr {
