--- a/css/components/_cart.scss
+++ b/css/components/_cart.scss
@@ -3,7 +3,7 @@ a {
 }
 
 form {
-  margin-top: 4em;
+  margin: 2em 0;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -11,8 +11,12 @@ form {
   border-radius: 2px;
 
   table {
+    padding: 2em 0;
     border-collapse: separate;
-    border-spacing: 1em 1em;
+    border-spacing: 0.5em 1.5em;
+    background-color: rgba(245, 245, 245, 0.3);
+    border-radius: 5px;
+    box-shadow: 0 0 6px gray;
 
     tbody {
       a {
@@ -70,6 +74,10 @@ form {
           }
 
           @include inputNumber(0 auto);
+
+          &:last-child {
+            font-weight: bold;
+          }
         }
 
         .coupon {
