--- a/css/components/_checkout.scss
+++ b/css/components/_checkout.scss
@@ -21,10 +21,10 @@
   justify-content: center;
   align-items: center;
   gap: 2em;
-  background: $secondary-color;
+  background-color: rgba(245, 245, 245, 0.3);
   border-radius: 5px;
+  box-shadow: 0 0 6px gray;
   width: 70vw;
-  box-shadow: 0 0 5px gray;
 
   h3 {
     margin-bottom: 2em;
