--- a/css/components/_search-form.scss
+++ b/css/components/_search-form.scss
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 0.5em;
 
     .close-icon {
       opacity: 1;
