--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -1,15 +1,21 @@
-/* MOBILE */
-@media screen and (min-width: 320px) {
+$mobilePortrait: 320px;
+$iphonePlus: 414px;
+$mobileLandscape: 480px;
+$tablet: 768px;
+$iPadPro: 834px;
+$desktop: 992px;
+$iPadPro12: 1023px;
+$largeDesktop: 1200px;
+$biggerScreen: 2074px;
+$biggerScreen2: 2559px;
+
+@media screen and (min-width: $mobilePortrait) {
   html {
     font-size: 60%;
 
     @import 'components/mobile-menu';
 
     .content-area {
-      .homepage-title {
-        margin-bottom: 2em;
-      }
-
       /* Home page products */
       .products {
         gap: 10em;
@@ -34,20 +40,24 @@
           align-items: center;
           gap: 3em;
 
-          .price,
-          .wp-element-button {
-            font-size: 2rem;
-            font-weight: bold;
-          }
+          .cart {
+            gap: 1em;
 
-          .quantity {
-            input {
-              font-size: 2.5rem;
+            .price {
+              font-weight: bold;
+              font-size: 2rem;
             }
-          }
 
-          form {
-            gap: 2em;
+            .wp-element-button {
+              font-size: 2rem;
+              font-weight: bold;
+            }
+
+            .quantity {
+              input {
+                font-size: 2rem;
+              }
+            }
           }
         }
 
@@ -75,7 +85,7 @@
 
     /* Cart page */
     .woocommerce {
-      table {
+      .woocommerce-cart-form {
         thead {
           .product-name {
             display: none;
@@ -131,16 +141,22 @@
         }
 
         .wc-proceed-to-checkout {
-          font-size: 2rem;
-          text-transform: capitalize;
+          font-size: 1.8rem;
         }
       }
 
+      /* Checkout Page */
       .checkout {
-        font-size: 1.2rem;
-
         #customer_details {
           flex-direction: column;
+
+          .woocommerce-billing-fields,
+          .woocommerce-shipping-fields {
+            .form-row {
+              justify-content: center;
+              align-items: center;
+            }
+          }
         }
       }
     }
@@ -157,25 +173,23 @@
           margin-left: 1em;
         }
 
+        input {
+          font-size: 2.5rem;
+          padding: 0.5em 0.5em 0.5em 2.2em;
+        }
+
         .close-icon {
           position: absolute;
           top: 0;
           right: -10px;
           font-size: 2rem;
-          opacity: 1;
-          transition: opacity 0.4s ease-in;
-        }
-
-        input {
-          font-size: 2.5rem;
-          padding: 0.5em 0.5em 0.5em 2.2em;
         }
       }
     }
   }
 }
 
-@media screen and (min-width: 414px) {
+@media screen and (min-width: $iphonePlus) {
   html {
     .search-wrapper-hidden {
       .search-input-field {
@@ -187,8 +201,7 @@
   }
 }
 
-/* MOBILE LANDSCAPE */
-@media screen and (min-width: 480px) {
+@media screen and (min-width: $mobileLandscape) {
   html {
     .search-wrapper-hidden {
       .search-input-field {
@@ -197,17 +210,10 @@
         }
       }
     }
-
-    .woocommerce {
-      table {
-        width: 90%;
-      }
-    }
   }
 }
 
-/* TABLET */
-@media screen and (min-width: 768px) and (orientation: portrait) {
+@media screen and (min-width: $tablet) and (orientation: portrait) {
   html {
     font-size: 100%;
 
@@ -254,7 +260,31 @@
           li {
             .price,
             .wp-element-button {
-              font-size: 5rem;
+              font-size: initial;
+            }
+          }
+        }
+      }
+    }
+
+    .woocommerce {
+      .checkout {
+        #customer_details {
+          .woocommerce-billing-fields,
+          .woocommerce-shipping-fields {
+            .form-row {
+              justify-content: initial;
+              align-items: initial;
+            }
+          }
+        }
+
+        #order_review {
+          .woocommerce-checkout-payment {
+            .place-order {
+              button {
+                font-size: 1.5rem;
+              }
             }
           }
         }
@@ -264,62 +294,26 @@
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          top: 18px;
-          margin-left: 1em;
-        }
-
-        .close-icon {
-          top: 0;
-          right: 0;
+          top: 20px;
         }
       }
     }
   }
 }
 
-// IPAD PRO 10.5"
-@media screen and (min-width: 834px) and (orientation: portrait) {
+@media screen and (min-width: $iPadPro) and (orientation: portrait) {
   html {
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          font-size: 3.5rem;
-          top: 35px;
-          margin-left: 0.5em;
+          top: 22px;
         }
       }
     }
   }
 }
 
-@media screen and (min-width: 800px) {
-  html {
-    .search-wrapper-hidden {
-      .search-input-field {
-        .placeholder-search-icon {
-          top: 12px;
-          left: 25px;
-        }
-      }
-    }
-  }
-}
-
-/* IPAD PRO */
-@media screen and (min-width: 833px) and (orientation: portrait) {
-  html {
-    .search-wrapper-hidden {
-      .search-input-field {
-        .placeholder-search-icon {
-          top: 18px;
-        }
-      }
-    }
-  }
-}
-
-/* DESKTOP & TABLET LANDSCAPE */
-@media screen and (min-width: 992px) {
+@media screen and (min-width: $desktop) {
   html {
     header {
       box-shadow: none;
@@ -390,7 +384,7 @@
         li {
           .price,
           .wp-element-button {
-            font-size: initial;
+            font-size: 1rem;
           }
         }
       }
@@ -399,19 +393,20 @@
         .entry-summary {
           gap: 3em;
 
-          .price,
-          .wp-element-button {
+          .price {
             font-size: initial;
           }
 
-          .quantity {
-            input {
+          .cart {
+            .wp-element-button {
               font-size: initial;
             }
-          }
 
-          form {
-            gap: 2em;
+            .quantity {
+              input {
+                font-size: initial;
+              }
+            }
           }
         }
 
@@ -425,12 +420,16 @@
 
     /* Cart page */
     .woocommerce {
-      table {
-        tbody {
-          .product-quantity {
-            .quantity {
-              input {
-                font-size: initial;
+      .woocommerce-cart-form {
+        table {
+          width: 90%;
+
+          tbody {
+            .product-quantity {
+              .quantity {
+                input {
+                  font-size: initial;
+                }
               }
             }
           }
@@ -452,13 +451,35 @@
         }
 
         #update-cart-btn {
-          font-size: 1.2rem;
+          font-size: initial;
         }
       }
 
       .cart-collaterals {
         .wc-proceed-to-checkout {
-          font-size: 1.5rem;
+          font-size: initial;
+        }
+      }
+
+      .checkout {
+        #customer_details {
+          .woocommerce-billing-fields,
+          .woocommerce-shipping-fields {
+            .form-row {
+              justify-content: initial;
+              align-items: initial;
+            }
+          }
+        }
+
+        #order_review {
+          .woocommerce-checkout-payment {
+            .place-order {
+              button {
+                font-size: 2rem;
+              }
+            }
+          }
         }
       }
     }
@@ -467,34 +488,56 @@
       .search-input-field {
         .placeholder-search-icon {
           top: 13px;
+          left: 40px;
         }
 
-        input {
-          font-size: 2rem;
-          padding: 0.5em 0.5em 0.5em 2.8em;
+        .close-icon {
+          right: 10px;
         }
       }
     }
   }
 }
 
-// IPAD PRO 12.9"
-@media screen and (min-width: 1024px) and (orientation: portrait) {
+@media screen and (min-width: $iPadPro12) and (orientation: portrait) {
   html {
+    header {
+      .header-wrapper {
+        .nav-container {
+          .nav-menu-wrapper {
+            left: 340px;
+
+            .menu-top-menu-container {
+              ul {
+                gap: 5em;
+              }
+            }
+          }
+
+          .dashicons-search {
+            right: 50px;
+            top: 17px;
+          }
+        }
+      }
+    }
+
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          font-size: 3.5rem;
-          top: 8px;
-          margin-left: 0.8em;
+          top: 22px;
+          left: 30px;
+        }
+
+        .close-icon {
+          right: -5px;
         }
       }
     }
   }
 }
 
-/* LARGE SCREENS */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $largeDesktop) {
   html {
     font-size: 100%;
 
@@ -511,8 +554,30 @@
           }
 
           .dashicons-search {
-            right: 75px;
+            right: 80px;
             top: 17px;
+          }
+        }
+      }
+    }
+
+    .content-area {
+      .product {
+        .entry-summary {
+          gap: 3em;
+        }
+      }
+    }
+
+    .woocommerce {
+      .checkout {
+        #order_review {
+          .woocommerce-checkout-payment {
+            .place-order {
+              button {
+                font-size: initial;
+              }
+            }
           }
         }
       }
@@ -529,7 +594,7 @@
   }
 }
 
-@media screen and (min-width: 2074px) {
+@media screen and (min-width: $biggerScreen) {
   html {
     font-size: 120%;
 
@@ -537,7 +602,7 @@
       .header-wrapper {
         .nav-container {
           .dashicons-search {
-            right: 190px;
+            right: 130px;
             top: 20px;
           }
 
@@ -556,13 +621,14 @@
       .search-input-field {
         .placeholder-search-icon {
           left: 70px;
+          top: 25px;
         }
       }
     }
   }
 }
 
-@media screen and (min-width: 2559px) {
+@media screen and (min-width: $biggerScreen2) {
   html {
     header {
       .header-wrapper {
