--- a/css/components/_cart-total.scss
+++ b/css/components/_cart-total.scss
@@ -8,9 +8,16 @@
     align-items: center;
     width: 80vw;
 
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }
+
     h2 {
       text-align: center;
       margin: 2em 0;
+      text-transform: capitalize;
     }
 
     table {
@@ -24,6 +31,7 @@
         th {
           border: 0.5px solid gray;
           padding: 1em;
+          text-transform: uppercase;
         }
 
         td {
@@ -57,8 +65,12 @@
           }
         }
 
-        form {
+        .woocommerce-shipping-calculator {
           justify-content: flex-start;
+
+          button {
+            @include button();
+          }
         }
       }
     }
@@ -73,6 +85,7 @@
         text-decoration: none;
         background-color: $secondary-color;
         padding: 1em;
+        width: 15em;
         font-weight: bold;
         border-radius: 5px;
         box-shadow: 0 3px 2px -2px gray;
