--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -35,28 +35,38 @@ $biggerScreen2: 2559px;
         justify-content: center;
         align-items: center;
 
+        .woocommerce-product-gallery__image {
+          display: flex;
+          justify-content: center;
+
+          a {
+            img {
+              width: 25em;
+              height: 25em;
+            }
+          }
+        }
+
         .entry-summary {
           justify-content: center;
           align-items: center;
           gap: 3em;
 
+          .price {
+            font-weight: bold;
+            font-size: 1.5rem;
+          }
+
           .cart {
             gap: 1em;
 
-            .price {
-              font-weight: bold;
-              font-size: 2rem;
+            input {
+              font-size: 1.5rem;
             }
 
             .wp-element-button {
-              font-size: 2rem;
               font-weight: bold;
-            }
-
-            .quantity {
-              input {
-                font-size: 2rem;
-              }
+              font-size: 1.5rem;
             }
           }
         }
@@ -70,6 +80,7 @@ $biggerScreen2: 2559px;
           h2 {
             font-size: 3rem;
             text-transform: capitalize;
+            margin-bottom: -2em;
           }
 
           .woocommerce-LoopProduct-link {
@@ -78,6 +89,19 @@ $biggerScreen2: 2559px;
             justify-content: center;
             align-items: center;
             gap: 3em;
+
+            img {
+              width: 25em;
+              height: 25em;
+            }
+
+            .price {
+              font-size: 1.5rem;
+            }
+          }
+
+          .wp-element-button {
+            font-size: 1.5rem;
           }
         }
       }
@@ -96,14 +120,6 @@ $biggerScreen2: 2559px;
           .product-name {
             display: none;
           }
-
-          .product-quantity {
-            .quantity {
-              input {
-                font-size: 1.8rem;
-              }
-            }
-          }
         }
       }
 
@@ -114,18 +130,12 @@ $biggerScreen2: 2559px;
 
         .input-text,
         .submit {
-          font-size: 1.8rem;
           box-shadow: 0 0 6px gray;
-        }
-
-        .wp-element-button {
-          font-size: 1.8rem;
         }
 
         #update-cart-btn {
           margin-top: 4em;
           float: none;
-          font-size: 1.8rem;
         }
       }
 
@@ -141,7 +151,7 @@ $biggerScreen2: 2559px;
         }
 
         .wc-proceed-to-checkout {
-          font-size: 1.8rem;
+          font-size: 1.5rem;
         }
       }
 
@@ -215,7 +225,7 @@ $biggerScreen2: 2559px;
 
 @media screen and (min-width: $tablet) and (orientation: portrait) {
   html {
-    font-size: 100%;
+    font-size: 90%;
 
     header {
       .header-wrapper {
@@ -246,8 +256,13 @@ $biggerScreen2: 2559px;
       .products {
         li {
           img {
-            width: 40em;
-            height: 40em;
+            width: 30em;
+            height: 30em;
+          }
+
+          .price,
+          .wp-element-button {
+            font-size: 1rem;
           }
         }
       }
@@ -260,7 +275,7 @@ $biggerScreen2: 2559px;
           li {
             .price,
             .wp-element-button {
-              font-size: initial;
+              font-size: 1rem;
             }
           }
         }
@@ -315,6 +330,8 @@ $biggerScreen2: 2559px;
 
 @media screen and (min-width: $desktop) {
   html {
+    font-size: 100%;
+
     header {
       box-shadow: none;
       background-color: transparent;
@@ -337,14 +354,14 @@ $biggerScreen2: 2559px;
           .nav-menu-wrapper {
             background-color: initial;
             position: relative;
-            left: 290px;
+            left: 360px;
             height: auto;
             width: fit-content;
 
             .menu-top-menu-container {
               ul {
                 flex-direction: row;
-                gap: 8em;
+                gap: 7em;
 
                 li {
                   a {
@@ -369,8 +386,8 @@ $biggerScreen2: 2559px;
 
           .dashicons-search {
             position: relative;
-            right: 30px;
-            top: 11px;
+            right: 65px;
+            top: 18px;
             font-size: 1.5rem;
           }
         }
@@ -487,8 +504,8 @@ $biggerScreen2: 2559px;
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          top: 13px;
-          left: 40px;
+          top: 22px;
+          left: 30px;
         }
 
         .close-icon {
@@ -501,27 +518,6 @@ $biggerScreen2: 2559px;
 
 @media screen and (min-width: $iPadPro12) and (orientation: portrait) {
   html {
-    header {
-      .header-wrapper {
-        .nav-container {
-          .nav-menu-wrapper {
-            left: 340px;
-
-            .menu-top-menu-container {
-              ul {
-                gap: 5em;
-              }
-            }
-          }
-
-          .dashicons-search {
-            right: 50px;
-            top: 17px;
-          }
-        }
-      }
-    }
-
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
@@ -539,8 +535,6 @@ $biggerScreen2: 2559px;
 
 @media screen and (min-width: $largeDesktop) {
   html {
-    font-size: 100%;
-
     header {
       .header-wrapper {
         .logo {
@@ -549,13 +543,8 @@ $biggerScreen2: 2559px;
         }
 
         .nav-container {
-          .nav-menu-wrapper {
-            left: 370px;
-          }
-
           .dashicons-search {
-            right: 80px;
-            top: 17px;
+            right: 70px;
           }
         }
       }
@@ -586,7 +575,6 @@ $biggerScreen2: 2559px;
     .search-wrapper-hidden {
       .search-input-field {
         .placeholder-search-icon {
-          top: 15px;
           left: 40px;
         }
       }
@@ -602,14 +590,14 @@ $biggerScreen2: 2559px;
       .header-wrapper {
         .nav-container {
           .dashicons-search {
-            right: 130px;
+            right: 200px;
             top: 20px;
           }
 
           .nav-menu-wrapper {
             .menu-top-menu-container {
               ul {
-                gap: 7em;
+                gap: 8em;
               }
             }
           }
@@ -634,7 +622,7 @@ $biggerScreen2: 2559px;
       .header-wrapper {
         .nav-container {
           .dashicons-search {
-            right: 100px;
+            right: 180px;
           }
         }
       }
@@ -644,7 +632,6 @@ $biggerScreen2: 2559px;
       .search-input-field {
         .placeholder-search-icon {
           left: 100px;
-          top: 10px;
         }
       }
     }
