--- a/css/components/_cart.scss
+++ b/css/components/_cart.scss
@@ -17,6 +17,7 @@ a {
     background-color: rgba(245, 245, 245, 0.3);
     border-radius: 5px;
     box-shadow: 0 0 6px gray;
+    width: 80vw;
 
     tbody {
       a {
@@ -120,7 +121,7 @@ a {
 
 hr {
   margin-top: 4em;
-  width: 80%;
+  width: 80vw;
   border: 0.5px solid gray;
 }
 
