--- a/css/components/_checkout.scss
+++ b/css/components/_checkout.scss
@@ -73,6 +73,8 @@
           width: 100%;
           -webkit-appearance: none;
           appearance: none;
+          -webkit-border-radius: 0;
+          border-radius: 0;
         }
       }
     }
