--- a/css/components/_single-product.scss
+++ b/css/components/_single-product.scss
@@ -7,7 +7,8 @@
 
     a {
       img {
-        border-radius: 2px;
+        box-shadow: 0 0 8px gray;
+        border-radius: 5px;
         width: 100%;
         height: 100%;
       }
