--- a/css/components/_checkout.scss
+++ b/css/components/_checkout.scss
@@ -62,7 +62,12 @@
           margin-top: 0.5em;
         }
 
+        label {
+          font-size: 1.25rem;
+        }
+
         input {
+          font-size: 1.25rem;
           padding: 0.5em;
           border-bottom: 0.5px solid;
           border-top: none;
